# little-owl-toolkit

./: index.html  package.json  prettier.config.cjs  tailwind.config.ts  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Switch.tsx
src/components/icons/: Logo.tsx
src/components/layouts/: Main.tsx
src/context/: ThemeContext.tsx
src/pages/: Error.tsx  Home.tsx  Settings.tsx
